# raytracerlib

./: .gitignore  Cargo.toml  todo
benches/: benchmarks.rs  test_4_esferas_800x800.json  test_4_esferas_fullHD.json
raytracer/: Cargo.toml
raytracer/src/: main.rs
src/: color.rs  lib.rs  material.rs  objects.rs  textures.rs
src/maths/: mod.rs  point.rs  vector3.rs
