[package]
name = "raytracerlib"
version = "0.1.0"
authors = ["Sebastián Felgueras <sebipincha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
[dependencies]
image = "0.23.12"
serde = {version = "1", features = ["derive"]}
num_cpus = "1"
crossbeam-utils = "0.8" #hace falta ya que sino no reconoce que el thread termina antes de terminar la funcion
[dev-dependencies]
criterion = "0.3"
serde_json = "1.0"

[[bench]]
name = "benchmarks"
harness = false